# jpeg-metadata-reader

./: README.md
jpeg-metadata-reader-c/: .gitignore  CMakeLists.txt  README.md
jpeg-metadata-reader-c/example/: CMakeLists.txt
jpeg-metadata-reader-c/include/private/: exif.h  jfif.h
jpeg-metadata-reader-c/include/public/: jpeg.h
jpeg-metadata-reader-c/source/: CMakeLists.txt  exif.c  jfif.c  jpeg.c
jpeg-metadata-reader-cpp/: .clang-format  CMakeLists.txt  README.md
jpeg-metadata-reader-cpp/example/: CMakeLists.txt
jpeg-metadata-reader-cpp/source/: CMakeLists.txt
